adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis assumenda, atque dignissimos fugiat similique quod quas modi ducimus autem alias veritatis adipisci libero, veniam incidunt temporibus hic deleniti quibusdam! Alias.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti totam aspernatur, dolorum consectetur sit provident quos quas error fugit eum sed maxime iste dignissimos quisquam eveniet unde tempore quam mollitia?</p>
 </body>
 </html>
